2005-02-23  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Added new "intro" param to prompt_selection
	* Configure.pm, Engine.pm, PkgVersion.pm, SelfUpdate.pm: use new
	"intro" param to prompt_selection

2005-02-24  Dave Morrison  <dmrrsn@users.sourceforge.net>

	*VirtPackage.pm: perl packages now Provide digest-pm (when >= 5.8.0)
	
2005-02-23  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm, Package.pm, SelfUpdate.pm, Shlibs.pm: refactored some
	of the code so that there's less duplication.  Shlibs.pm now
	ISA Package.pm.

2005-02-23  Daniel Macks  <dmacks@netspace.org>

	* Notify.pm, Notify/Growl.pm, Engine.pm: Canonicalize notification
	event names to /(Passed|Failed)$/

2005-02-23  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Test length instead of logical value of strings.
	Overhaul DocFiles handler.

2005-02-23  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Shlibs.pm: removed old comments and fixed all print commands to use
	STDERR

2005-02-23  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Shlibs.pm: Adding changes to Storable calls from Benjamin Reed on
	2005-02-22.

2005-02-22  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: protect pkgnames when used as regex patterns.

2005-02-22  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, Configure.pm: Removed Verbosity:4 (pedantic) level.
	* Engine.pm: Added --(no-)pedantic flag to 'fink validate'.
	* Validation.pm: Use --pedantic flag instead of verbosity level to
	control display of pendantic warnings

2005-02-22  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Package.pm: Lock indexing so multiple indexes don't step on
	each other and/or fail.  If one is indexing, other fink processes
	will wait for it to finish and then just re-load the package
	hash from storable.

2005-02-21  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Shlibs.pm: Added last two updates to shlibs.db calls

2005-02-21  Daniel Macks  <dmacks@netspace.org>
